# crypto_pals

./: Cargo.toml
src/: set1.rs  set1.rs~  set2.rs  set3.rs  util.rs
src/s1/: ch1.rs  ch2.rs  ch3.rs  ch3.rs~  ch4.rs  ch4.rs~  ch5.rs  ch6.rs  ch6.rs~  ch7.rs  ch8.rs  ch8.rs~  mod.rs~
src/s2/: ch10.rs  ch11.rs  ch12.rs  ch13.rs  ch14.rs  ch15.rs  ch16.rs  ch9.rs  mod.rs
src/s3/: ch17.rs  mod.rs
tests/: set3.rs
